Updated jvmArgs for runSampleVis in build.gradle
Also commented out rock instantiation for now